--- a/style.css
+++ b/style.css
@@ -1,10 +1,33 @@
-#submit_button{
-    margin-bottom:15px;
-    margin-top:10px;
-
+#submit_button
+{
+	margin-top: 20px; 
+	margin-bottom: 20px; 
 }
-#sort_button{
-    margin-bottom:15px;
-    margin-top:10px;
-    display:none;
+#sort_button
+{
+	display: none;
+	margin-top: 20px; 
+	margin-bottom: 20px; 
+}
+
+input
+{
+	margin: 10px;
+}
+#display_name_with_commas
+{
+	border: 1px solid green;
+    padding: 10px;
+	background-color: greenyellow;
+	border-radius: 10px;
+    width: 50%;
+}
+
+#display_name_without_commas
+{
+	border: 1px solid red;
+    padding: 10px;
+    background-color: lightcoral;
+	border-radius: 10px;
+    width: 50%;
 }
