--- a/style.css
+++ b/style.css
@@ -1,33 +1,10 @@
-#submit_button
-{
-	margin-top: 20px; 
-	margin-bottom: 20px; 
+body{
+    text-align:center;
 }
-#sort_button
-{
-	display: none;
-	margin-top: 20px; 
-	margin-bottom: 20px; 
-}
+#show_added_names{
+margin-bottom: 15px;
 
-input
-{
-	margin: 10px;
 }
-#display_name_with_commas
-{
-	border: 1px solid green;
-    padding: 10px;
-	background-color: greenyellow;
-	border-radius: 10px;
-    width: 50%;
-}
-
-#display_name_without_commas
-{
-	border: 1px solid red;
-    padding: 10px;
-    background-color: lightcoral;
-	border-radius: 10px;
-    width: 50%;
+#sort_names{
+    margin-bottom: 15px;
 }
