--- a/C81style.css
+++ b/C81style.css
@@ -5,7 +5,7 @@ h1
 	font-size: 40px;
 }
 .body_backgorund {
-	background-image:url("bg1.jpg");
+	background-image:url("project_background.jpeg");
 	background-position: center;
 	background-size: cover;
 }
